--- a/client/src/index.css
+++ b/client/src/index.css
@@ -335,4 +335,11 @@ body {
   .font-display {
     font-family: var(--font-display);
   }
+  .home-wrapper {
+  min-height: 100vh;          
+  display: flex;
+  flex-direction: column;
+  justify-content: center;    
+  align-items: center;        
+  }
 }
